--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "async": "^1.5.2",
+    "body-parser": "^1.15.0",
     "browser-sync": "^2.10.0",
     "cookie": "^0.2.3",
     "coveralls": "^2.11.4",
@@ -30,9 +31,9 @@
   },
   "scripts": {
     "start": "bin/sso-proxy.js",
-    "test": "node_modules/mocha/bin/_mocha --recursive test",
-    "coverage": "DEBUG=* node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- test",
-    "coveralls": "node node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js --verbose"
+    "test": "NODE_ENV=test node_modules/mocha/bin/_mocha --recursive test",
+    "coverage": "NODE_ENV=test DEBUG=* node node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- test",
+    "coveralls": "NODE_ENV=test node node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha --report lcovonly -- test && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js --verbose"
   },
   "author": "Scott Ganyo <sganyo@apigee.com>",
   "license": "Apache-2.0"
