--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "config": "^1.19.0",
     "connect": "^3.4.1",
-    "cookie": "^0.2.3",
+    "cookies": "^0.5.1",
     "debug": "^2.2.0",
     "js-yaml": "^3.5.3",
     "jsonwebtoken": "^5.5.4",
