--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "passport": "^0.3.2",
     "passport-oauth": "^1.0.0",
     "passport-oauth2-refresh": "^1.0.0",
-    "microgateway-core": "https://github.com/apigee/microgateway-core.git"
+    "microgateway-core": "git@github.com:apigee/microgateway-core.git"
   },
   "devDependencies": {
     "async": "^1.5.2",
@@ -28,6 +28,7 @@
     "pem": "^1.8.1",
     "request": "^2.67.0",
     "should": "^8.2.2",
+    "superagent": "^1.7.2",
     "supertest": "^1.0.0"
   },
   "scripts": {
