--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "passport": "^0.3.2",
     "passport-oauth": "^1.0.0",
     "passport-oauth2-refresh": "^1.0.0",
-    "microgateway-core": "git@github.com:apigee/microgateway-core.git",
+    "microgateway-core": "^2.0.14",
     "superagent": "^1.7.2"
   },
   "devDependencies": {
