--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,13 @@ node_js:
   - "5"
   - "4"
 sudo: false
-
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 after_success:
   npm run coveralls
