--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "debug": "^2.2.0",
     "js-yaml": "^3.5.3",
     "jsonwebtoken": "^5.5.4",
-    "microgateway-core": "^2.0.15",
+    "microgateway-core": "2.1.0",
     "mkdirp": "^0.5.1",
     "passport": "^0.3.2",
     "passport-oauth": "^1.0.0",
